# CppUnitLite

./: CMakeLists.txt  CppUnitLiteConfig.cmake.in  README.md
src/: CMakeLists.txt
